--- a/templates/data.html
+++ b/templates/data.html
@@ -69,7 +69,7 @@
     <tr>
         <td><a href="{{ row['LINK'] }}" class="tvtropes-link">{{ row['NAME'] }}</a></td>
         <td>{{ row['TAG'] }}</td>
-        <td>{{ row['RELEVANT TOPICS'] }}</td>
+        <td>{{ row['CHARACTER TYPES'] }}</td>
     </tr>
     {% endfor %}
 </table>
