--- a/static/styles.css
+++ b/static/styles.css
@@ -107,3 +107,14 @@ td {
 .tvtropes-link:hover {
     color: #3c4b5d;
 }
+
+.tvtropes-quote {
+    font-style: italic;
+    color: #888;
+}
+
+.centered {
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+}
