--- a/templates/home.html
+++ b/templates/home.html
@@ -4,41 +4,51 @@
 
 {% block content %}
 <h1>StoryHelp Suggestions</h1>
-<span>Select whatever characters, topics, and genres you would like your story to include, or leave any item marked as none. Once you have finished with your selections, press "Submit." Our program will output a tropey narrative suggestion!</span>
+<span>Select whatever characters, topics, and genres you would like your story to include, or leave any item marked as
+    none. Once you have finished with your selections, press "Submit." Our program will output a tropey narrative
+    suggestion!</span>
 
 <form action="/result" method="POST">
     <label for="genre-dropdown">What genre(s) is your story?</label>
-    <select name="genre" class="dropdown-container" id="genre-dropdown">
-        {% for option in data["genres"] %}
-        <option value="{{ option }}">{{ option }}</option>
-        {% endfor %}
-    </select>
-    <button type="button" onclick="addDropdown('genre-dropdown')">Add Another Genre</button>
+    <div id="genre-container">
+        <select name="genre" class="dropdown-container" id="genre-dropdown">
+            {% for option in data["genres"] %}
+            <option value="{{ option }}">{{ option }}</option>
+            {% endfor %}
+        </select>
+    </div>
+    <button type="button" onclick="addDropdown('genre-dropdown','genre-container')">Add Another Genre</button>
 
     <label for="character-dropdown">Which characters are involved?</label>
-    <select name="character" class="dropdown-container" id="character-dropdown">
-        {% for option in data["characters"] %}
-        <option value="{{ option }}">{{ option }}</option>
-        {% endfor %}
-    </select>
-    <button type="button" onclick="addDropdown('character-dropdown')">Add Another Character</button>
+    <div id="character-container">
+        <select name="character" class="dropdown-container" id="character-dropdown">
+            {% for option in data["characters"] %}
+            <option value="{{ option }}">{{ option }}</option>
+            {% endfor %}
+        </select>
+    </div>
+    <button type="button" onclick="addDropdown('character-dropdown','character-container')">Add Another
+        Character</button>
 
     <label for="topic-dropdown">Any particular topics at play?</label>
-    <select name="topic" class="dropdown-container" id="topic-dropdown">
-        {% for option in data["topics"] %}
-        <option value="{{ option }}">{{ option }}</option>
-        {% endfor %}
-    </select>
-    <button type="button" onclick="addDropdown('topic-dropdown')">Add Another Topic</button>
+    <div id="topic-container">
+        <select name="topic" class="dropdown-container" id="topic-dropdown">
+            {% for option in data["topics"] %}
+            <option value="{{ option }}">{{ option }}</option>
+            {% endfor %}
+        </select>
+    </div>
+    <button type="button" onclick="addDropdown('topic-dropdown','topic-container')">Add Another Topic</button>
 
     <button type="submit" value="Submit">Submit</button>
 </form>
 
 <script>
-    function addDropdown(id) {
-        var originalElement = document.getElementById(id);
+    function addDropdown(child_id, parent_id) {
+        var originalElement = document.getElementById(child_id);
         var clonedElement = originalElement.cloneNode(true);
-        originalElement.insertAdjacentElement('afterend', clonedElement);
+        var parentElement = document.getElementById(parent_id);
+        parentElement.appendChild(clonedElement);
     }
 </script>
 {% endblock %}
